--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           "Future Efficiency": futureValues.Efficiency
         };
 
-        fetch("YOUR_GOOGLE_APPS_SCRIPT_URL", {
+        fetch("https://script.google.com/a/macros/ucdconnect.ie/s/AKfycbwiTv-MFMkyBh5_7tYwrMtSpM7YAeo1xQMrgDz_q6aUmcExxiXQ7g48y8TPZD67_ILQuw/exec", {
           method: "POST",
           body: JSON.stringify(payload),
           headers: { "Content-Type": "application/json" }
