--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         "Future Efficiency": futureValues.Efficiency
       };
 
-      fetch("https://script.google.com/a/macros/ucdconnect.ie/s/AKfycbwiTv-MFMkyBh5_7tYwrMtSpM7YAeo1xQMrgDz_q6aUmcExxiXQ7g48y8TPZD67_ILQuw/exec", {
+      fetch("https://script.google.com/macros/s/AKfycbzVkOjwbLgd8UGXAujtNlmSshA2Js3a0QgOs0NhpSNPR7F63ARzXz_W2cBjSXUMfgVyFg/exec", {
         method: "POST",
         body: JSON.stringify(payload),
         headers: { "Content-Type": "application/json" }
